Minor corrections to controller and README.md
